item-header padding

--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -51,7 +51,7 @@
                 // display: grid;
                 // border: 2px solid red;
                 padding: 1rem 0rem;
-                padding: 1rem 1rem 2rem;
+                padding: 1rem .5rem 2rem;
                 @include sm {
                     padding: 1rem;
                 }
