--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -239,7 +239,7 @@
                     overflow: hidden;
                     width: 100%;
                     // border: 2px solid $overlay-blue-darkest;
-                    border-radius: .25rem;
+                    // border-radius: .25rem;
                     // margin: 0 auto;
                     img {
                         width: 100%;
@@ -255,7 +255,7 @@
                     &:hover {
                         img {
                             transform: scale(1.1);
-                            transition: 2s;
+                            transition: 1.5s;
                         }
                     }
                 }
