--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -70,12 +70,12 @@
                 }
                 .item-title {
                     text-transform: capitalize;
-                    margin-bottom: 1rem;
+                    // margin-bottom: .5rem;
                     font-weight: 700;
                     font-size: 1.125rem;
                     font-size: clamp(1.125rem, 2vw, 2rem);
                     @include md {
-                    margin-bottom: .5rem;
+                    // margin-bottom: .5rem;
                         // font-size: 1.5rem;
                     }
                 }
