--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -200,7 +200,7 @@
                     }
 
                     a {
-                        background-color: hsl(0, 0%, 96%);
+                        background-color: #f4f4f4;
                         color: $overlay-blue-darker;
                         font-weight: 500;
                         display: inline-block;
