--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -149,9 +149,10 @@
 
                 .hero-title-header {
                     // font-size: clamp(.85rem, 2vw, 1.15rem);
+                    // border: 2px solid red;
                     line-height: 1.25;
-                    font-size: .85rem;
-                    font-size: $font-clamp-xsm;
+                    font-size: .95rem;
+                    font-size: $font-clamp-sm;
                     font-weight: 400;
                     color: $brand;
                     // animation: header 4s ease forwards 4s;
@@ -180,7 +181,7 @@
                     text-transform: capitalize;
                     text-align: center;
                     text-align: left;
-                    line-height: 1.4;
+                    line-height: 1.25;
                     font-family: $font-title;
                     font-weight: 500;
                     font-size: 2.5rem;
