--- a/css/style.css
+++ b/css/style.css
@@ -2878,7 +2878,7 @@ hamburger
   overflow: hidden;
   border-radius: 0.25rem;
   background: #fff;
-  box-shadow: 0rem 0.5rem 1rem #0001;
+  box-shadow: 0rem 0.5rem 1rem rgba(0, 0, 0, 0.2);
 }
 .work .work-container .item:first-child {
   margin-bottom: 15vh;
