--- a/css/style.css
+++ b/css/style.css
@@ -2879,6 +2879,7 @@ hamburger
   border-radius: 0.25rem;
   background: #fff;
   box-shadow: 0rem 0.5rem 1rem rgba(0, 0, 0, 0.2);
+  position: relative;
 }
 .work .work-container .item:first-child {
   margin-bottom: 15vh;
@@ -2890,12 +2891,11 @@ hamburger
 }
 @media (min-width: 768px) {
   .work .work-container .item {
-    padding: 0;
+    padding-bottom: 1rem;
     background: #ffff;
   }
 }
 .work .work-container .item .item-header {
-  padding: 1rem 0rem;
   padding: 1rem 0.5rem 2rem;
 }
 @media (min-width: 576px) {
@@ -2923,16 +2923,28 @@ hamburger
 }
 .work .work-container .item .item-header .item-meta-data {
   display: flex;
-  align-items: start;
+  align-items: center;
+  justify-content: space-evenly;
   gap: 1rem;
   flex-wrap: wrap;
   margin: 1.5rem 0 0;
-  text-transform: capitalize;
+  padding: 0.5rem 1rem;
   list-style: none;
+  position: absolute;
+  bottom: 0;
+  background: #20262e;
+  width: 100%;
+  left: 0;
 }
 @media (min-width: 768px) {
   .work .work-container .item .item-header .item-meta-data {
     gap: 1rem;
+    background: transparent;
+  }
+}
+@media (min-width: 820px) {
+  .work .work-container .item .item-header .item-meta-data {
+    bottom: -1rem;
   }
 }
 .work .work-container .item .item-header .item-meta-data p {
@@ -2940,9 +2952,10 @@ hamburger
   color: #f4f4f4;
   padding: 0.25rem 0.5rem;
   border-radius: 0.25rem;
-  font-size: 0.8rem;
+  font-size: 0.75rem;
   text-transform: lowercase;
   box-shadow: 0.125rem 0.25rem 0.25rem #0002;
+  text-transform: uppercase;
 }
 .work .work-container .item .item-header .item-meta-data p::first-letter {
   text-transform: capitalize;
@@ -2952,7 +2965,7 @@ hamburger
   border-radius: 0.25rem;
   padding: 0.25rem 0.5rem;
   font-size: 0.8rem;
-  text-transform: capitalize;
+  text-transform: uppercase;
   background: #20262e;
   color: #f4f4f4;
   transition: 0.25s;
@@ -2976,6 +2989,7 @@ hamburger
   justify-content: space-between;
   align-items: center;
   gap: 1rem;
+  margin-bottom: 5vh;
 }
 .work .work-container .item .item-header .item-cta a {
   padding: 0.8rem;
