--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -118,6 +118,10 @@
                             text-transform: capitalize;
                         }
                         text-transform: uppercase;
+
+                        &:hover {
+                            background: $overlay-blue-light;
+                        }
                     }
 
                     li {
