work item a active transform

--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -244,7 +244,7 @@
                                 transform: scale(.98);
                                 letter-spacing: normal;
                                 i {
-                                    transform: translateX(-25rem);
+                                    transform: translateX(-.25rem);
                                 }
                                 &::before {opacity: 0;}
                                 &::after {opacity: 1;}
