--- a/css/style.css
+++ b/css/style.css
@@ -1003,19 +1003,18 @@ hamburger
   }
 }
 
-.welcome-section {
+.banner {
   padding: 0;
   width: 100%;
   height: 95vh;
-  background: #15191e;
-  background: linear-gradient(#15191e 30%, #000 60%);
   background: linear-gradient(90deg, #0009 50%, #0004 80%);
+  background: #20262e;
   position: relative;
   z-index: 1;
   overflow: hidden;
 }
 @media (max-width: 1024px) {
-  .welcome-section::after {
+  .banner.index-banner::after {
     position: absolute;
     content: "";
     top: 0;
@@ -1028,7 +1027,7 @@ hamburger
   }
 }
 @media (max-width: 1024px) and (max-width: 1024px) {
-  .welcome-section::after {
+  .banner.index-banner::after {
     background-size: 90%;
     background-size: contain;
     background-size: cover;
@@ -1038,13 +1037,13 @@ hamburger
   }
 }
 @media (min-width: 1024px) {
-  .welcome-section {
+  .banner.index-banner {
     background-image: url("../hero/ales-nesetril-Im7lZjxeLhg-unsplash-bg.jpg");
     background-position: center left;
     background-position: 10% 50%;
     background-attachment: fixed;
   }
-  .welcome-section::after {
+  .banner.index-banner::after {
     position: absolute;
     content: "";
     top: 0;
@@ -1064,10 +1063,56 @@ hamburger
     }
   }
 }
-.welcome-section .hero {
+@media (max-width: 1024px) {
+  .banner.about-banner::after {
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background-image: url("../img/shakexblue-min.jpg");
+    background-repeat: no-repeat;
+    mix-blend-mode: overlay;
+    z-index: -1;
+    background-size: contain;
+    background-position: right;
+    opacity: 0.6;
+  }
+}
+@media (max-width: 1024px) and (max-width: 450px) {
+  .banner.about-banner::after {
+    background-size: 100%;
+    background-size: cover;
+    background-position: right;
+    background-position: 0% bottom;
+  }
+}
+@media (min-width: 1024px) {
+  .banner.about-banner {
+    background-attachment: fixed;
+  }
+  .banner.about-banner::after {
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background-image: url("../img/shakexblue-min.jpg");
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    mix-blend-mode: overlay;
+  }
+}
+.banner .hero {
   position: relative;
 }
-.welcome-section .hero .hero-bg {
+.banner .hero .hero-bg {
   position: absolute;
   position: relative;
   width: 100vw;
@@ -1076,11 +1121,11 @@ hamburger
   isolation: isolate;
 }
 @media (min-width: 1024px) {
-  .welcome-section .hero .hero-bg {
+  .banner .hero .hero-bg {
     display: none;
   }
 }
-.welcome-section .hero .hero-bg::after {
+.banner .hero .hero-bg::after {
   content: "";
   position: absolute;
   top: 0;
@@ -1090,7 +1135,7 @@ hamburger
   background: rgba(0, 0, 0, 0.45);
   z-index: 1;
 }
-.welcome-section .hero .hero-bg img {
+.banner .hero .hero-bg img {
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -1102,7 +1147,7 @@ hamburger
     object-position: 40%;
   }
 }
-.welcome-section .hero #hero-content {
+.banner .hero .hero-content {
   background: transparent;
   padding: 5vh 5vw;
   position: relative;
@@ -1111,28 +1156,28 @@ hamburger
   text-transform: capitalize;
 }
 @media (min-width: 768px) {
-  .welcome-section .hero #hero-content {
+  .banner .hero .hero-content {
     width: max-content;
     top: 5vh;
   }
 }
 @media (min-width: 1024px) {
-  .welcome-section .hero #hero-content {
+  .banner .hero .hero-content {
     top: 15vh;
   }
 }
-.welcome-section .hero #hero-content .hero-title {
+.banner .hero .hero-content .hero-title {
   margin-bottom: 0.25rem;
   width: 100%;
 }
-.welcome-section .hero #hero-content .hero-title .hero-title-header {
+.banner .hero .hero-content .hero-title .hero-title-header {
   line-height: 1.25;
   font-size: 0.95rem;
   font-size: clamp(.95rem, 2vw, 1.125rem);
   font-weight: 400;
   color: #bfbfbf;
 }
-.welcome-section .hero #hero-content .hero-title .hero-title-header a {
+.banner .hero .hero-content .hero-title .hero-title-header a {
   color: inherit;
   font-size: inherit;
 }
@@ -1149,7 +1194,7 @@ hamburger
     transform: translateY(0);
   }
 }
-.welcome-section .hero #hero-content .hero-title .hero-description {
+.banner .hero .hero-content .hero-title .hero-description {
   text-transform: capitalize;
   text-align: center;
   text-align: left;
@@ -1175,15 +1220,15 @@ hamburger
   }
 }
 @media (min-width: 1024px) {
-  .welcome-section .hero #hero-content .hero-title {
+  .banner .hero .hero-content .hero-title {
     top: 15vh;
   }
-  .welcome-section .hero #hero-content .hero-title p {
+  .banner .hero .hero-content .hero-title p {
     text-align: center;
     text-align: left;
   }
 }
-.welcome-section .hero #hero-content .hero-meta-description {
+.banner .hero .hero-content .hero-meta-description {
   display: inline-block;
   font-size: 1.25rem;
   font-size: clamp(1.25rem, 2.25vw, 1.5rem);
@@ -1205,7 +1250,7 @@ hamburger
     opacity: 1;
   }
 }
-.welcome-section .hero #cta-header {
+.banner .hero #cta-header {
   background: #dc143c;
   margin: 20vh 0 0;
   position: relative;
@@ -1224,17 +1269,17 @@ hamburger
   z-index: 2;
 }
 @media (max-width: 576px) {
-  .welcome-section .hero #cta-header {
+  .banner .hero #cta-header {
     margin: 20vh 0 0;
   }
 }
 @media (min-width: 576px) {
-  .welcome-section .hero #cta-header {
+  .banner .hero #cta-header {
     margin: 20vh 0 0;
   }
 }
 @media (min-width: 768px) {
-  .welcome-section .hero #cta-header {
+  .banner .hero #cta-header {
     font-size: 1.5em;
     width: 20rem;
     text-align: center;
@@ -1242,7 +1287,7 @@ hamburger
   }
 }
 @media (min-width: 1024px) {
-  .welcome-section .hero #cta-header {
+  .banner .hero #cta-header {
     margin: 15vh 0 0;
   }
 }
@@ -1259,7 +1304,7 @@ hamburger
     transform: translateX(0);
   }
 }
-.welcome-section .hero #cta-header::before, .welcome-section .hero #cta-header::after {
+.banner .hero #cta-header::before, .banner .hero #cta-header::after {
   position: absolute;
   content: "";
   top: 0;
@@ -1271,11 +1316,11 @@ hamburger
   border: none;
   outline: none;
 }
-.welcome-section .hero #cta-header::before {
+.banner .hero #cta-header::before {
   box-shadow: inset 2px 2px 3px rgba(225, 225, 225, 0.1), inset -2px -2px 3px rgba(0, 0, 0, 0.15), 0.025rem 0.25rem 0.5rem rgba(0, 0, 0, 0.15);
   background: linear-gradient(0deg, #750b20, #dd134c);
 }
-.welcome-section .hero #cta-header::after {
+.banner .hero #cta-header::after {
   opacity: 1;
   z-index: -1;
   animation: 3s cta-btn infinite;
@@ -1286,7 +1331,7 @@ hamburger
   background: linear-gradient(0deg, #dc134c, #750b20);
   box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.25), inset -2px -2px 3px rgba(225, 225, 225, 0.2), 0.025rem 0.225rem 0.25rem rgba(0, 0, 0, 0.25);
 }
-.welcome-section .hero #cta-header span {
+.banner .hero #cta-header span {
   position: relative;
   display: inline-block;
   text-transform: none;
@@ -1313,28 +1358,28 @@ hamburger
   }
 }
 @media (max-width: 820px) {
-  .welcome-section .hero #cta-header:active {
+  .banner .hero #cta-header:active {
     transition: 0.2s;
     transform: scale(0.95);
   }
-  .welcome-section .hero #cta-header:active::before {
+  .banner .hero #cta-header:active::before {
     opacity: 0;
   }
-  .welcome-section .hero #cta-header:active::after {
+  .banner .hero #cta-header:active::after {
     opacity: 1;
   }
 }
 @media (min-width: 820px) {
-  .welcome-section .hero #cta-header:hover {
+  .banner .hero #cta-header:hover {
     transition: 0.2s;
     transform: scale(0.95);
     border-top-right-radius: 5rem;
   }
-  .welcome-section .hero #cta-header:hover::before {
+  .banner .hero #cta-header:hover::before {
     border-top-right-radius: 5rem;
     opacity: 0;
   }
-  .welcome-section .hero #cta-header:hover::after {
+  .banner .hero #cta-header:hover::after {
     border-top-right-radius: 5rem;
     opacity: 1;
   }
