--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -136,65 +136,52 @@
             }
         }
 
-        // end of skills top section
-        // DROPDOWN SECTION
-        .dropdown {
-            position: relative;
-            // margin: 5vh auto 0;
-            z-index: 4;
-            width: 100%;
+        // BUTTONS CONTAINER
+        .buttons-container {
             // border: 2px solid red;
-
-            // SKILLS-TOP DATA-SCROLL
-            &.io-item {
-                transform: scale(.7) translateY(5vh);
-                opacity: 1;
-                transition: 1s;
+            display: flex;
+            justify-content: space-between;
+            margin: 2.5vh 5vw;
+            @include md {
+                justify-content: start;
+                gap: 5vw;
             }
+        }
+        // DROPDOWN BUTTON
+        .skills-cta {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding: .5rem 1rem;
+            width: 10rem;
+            width: clamp(10rem, 20vw, 12rem);
 
-            &.active-item {
-                opacity: 1;
-                transition: 1.5s;
-                transform: scale(1) translateY(0);
-            }
+            background: $overlay-blue-dark;
+            color: $text-light;
+            font-size: 1.1rem;
+            font-size: clamp(1.1rem, 2.5vw, 1.25rem);
+            font-weight: 400;
+            text-transform: capitalize;
+            font-family: $font-title; 
 
-            // dropdown button
-            .dropbtn {
-                display: flex;
-                align-items: center;
-                justify-content: space-between;
-                padding: .5rem 1rem;
-                margin: 2.5vh 5vw;
-                width: 11rem;
-                width: clamp(10rem, 20vw, 12rem);
-                background: $span-crimson;
-                color: $text-light;
-                font-size: 1.1rem;
-                font-size: clamp(1.1rem, 2.5vw, 1.25rem);
-                font-weight: 400;
-                text-transform: capitalize;
-                border: none;
-                border-radius: $brand-br;
-                cursor: pointer;
+            border: none;
+            border-radius: $brand-br;
+            cursor: pointer;
+            transition: .25s;
+            position: relative;
+            isolation: isolate;
+
+            i {
+                // border: 1px solid red;
+                font-weight: 800;
+                margin-left: 1rem;
+                font-size: 1rem;
                 transition: .25s;
-                font-family: $font-title;
-                position: relative;
-                // overflow: hidden;
-                isolation: isolate;
+            }
+            
 
-                @include md {
-                    // padding: .5rem 2rem;
-                }
-
-                i {
-                    // border: 1px solid red;
-                    font-weight: 800;
-                    margin-left: 1rem;
-                    font-size: 1rem;
-                    // color: $brand;
-                    transition: .5s;
-                }
-
+            &.dropbtn {
+                background: $span-crimson;
                 // DROPDOWN BTN SHADOWS
                 &::before,
                 &::after {
@@ -221,9 +208,6 @@
                     opacity: 0;
                     box-shadow: $box-light-top-sm-hover;
                 }
-
-                // BUTTON HOVER AND ACTIVE MEDIA QUERY
-
                 &.active {
                     transform: scale(.98);
                     color: $brand;
@@ -234,37 +218,50 @@
                         color: $text-light;
                         transform: rotate(-180deg);
                     }
-
+    
                     &::before {
                         opacity: 0
                     }
-
+    
                     &::after {
                         opacity: 1
                     }
                 }
-
-                @include md {
-                    &:hover {
-                        &::before {
-                            opacity: 0;
-                        }
-                        &::after {
-                            opacity: 1;
-                        }
-
-
-                        i {
-                            color: $text-light;
-                        }
-                    }
-                }
-
-                // end of box shadow states
-                // end of dropdown button shadows
-
-
             }
+            &.page-cta {
+                background: #f4f4f4;
+                color: $overlay-blue-dark;
+                &:hover {
+                    transform: scale(.98);
+                    color: $span-crimson;
+                    transition: .25s;
+                }
+            }
+
+        }
+        // end of skills top section
+        // DROPDOWN SECTION
+        .dropdown {
+            position: relative;
+            // margin: 5vh auto 0;
+            z-index: 4;
+            width: 100%;
+            // border: 2px solid red;
+
+            // SKILLS-TOP DATA-SCROLL
+            &.io-item {
+                transform: scale(.7) translateY(5vh);
+                opacity: 1;
+                transition: 1s;
+            }
+
+            &.active-item {
+                opacity: 1;
+                transition: 1.5s;
+                transform: scale(1) translateY(0);
+            }
+
+            
 
             // end of dropdown button
             // dropdown content ( ie. skills items)
