--- a/sass/_utilities.scss
+++ b/sass/_utilities.scss
@@ -199,11 +199,6 @@ hamburger
 .custom-scrollbar-js {
     height: 200px;
 }
-/*end of bootstrap scrollbar*/
-
-
-/* end of section title span animation */
-
 // back to top button
 .top-link {
     @media (max-width: 768px){
@@ -307,19 +302,38 @@ hamburger
 }
 // end of back to top button
 
+// BUTTONS CONTAINER
+.buttons-container {
+    // border: 2px solid red;
+    display: flex;
+    justify-content: space-between;
+    padding: 2.5vh 5vw;
+    gap: 1rem;
+    @include md {
+        justify-content: start;
+        gap: 2rem;
+    }
+}
 
 // CTA BUTTONS
 .btn {
     border: 2px solid #000;
-    padding: .5rem;
+    padding: .65rem 1rem;
     border: none;
-    border-radius: 1rem;
+    border-radius: .25rem;
     text-align: center;
-    letter-spacing: .05rem;
+    letter-spacing: .025rem;
     transition: .2s;
     text-transform: capitalize;
     isolation: isolate;
     position: relative;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+
+    i {
+
+    }
 
     &::before, &::after {
         content: '';
@@ -328,7 +342,7 @@ hamburger
         left: 0;
         width: 100%;
         height: 100%;
-        border-radius: 1rem;
+        border-radius: .25rem;
         transition: .2s;
         z-index: -1;
     }
@@ -340,6 +354,30 @@ hamburger
         box-shadow: $box-light-top-sm-hover;
         opacity: 0;
     }
+
+    &.btn-primary {
+        color: $text-light;
+        &::before {
+            background: $button-crimson
+        }
+        &::after {
+            background: $button-crimson-hover;
+        }
+    }
+    &.btn-secondary {
+        color: $overlay-blue-dark;
+        &::before {
+            background: #ffff;
+            box-shadow: none;
+            border: 1px solid $overlay-blue-dark;
+        }
+        &::after {
+            background: #fafafa;
+            box-shadow: none;
+            border: none;
+        }
+    }
+
     // HOVER AND ACTIVE CLASS MEDIA QUERY
     @media (min-width: 820px) {
         &:hover {
