--- a/sass/_form.scss
+++ b/sass/_form.scss
@@ -129,6 +129,27 @@ form {
         i {
             // margin-left: .5rem;
             transition: .25s ease;
+            position: relative;
+            color: transparent;
+            // width: 1rem;
+            &::before, &::after {
+                content: '';
+                position: absolute;
+                top: 0;
+                right: 1rem;
+                width: 100%;
+                height: 100%;
+                font-family: 'Font Awesome 6 Free';
+                color: #fff;
+                transition: .25s;
+            }
+            &::before {
+                content: '\f2b6';
+            }
+            &::after {
+                content: '\f0e0';
+                opacity: 0;
+            }
         }
         // form button box shadow
         &::before, &::after {
@@ -159,6 +180,8 @@ form {
             letter-spacing: 0;
             i {
                 transform: translateX(-.25rem);
+                &::before {opacity: 0;}
+                &::after {opacity: 1;}
             }
             &::before {opacity: 0;}
             &::after {opacity: 1;}
