--- a/css/style.css
+++ b/css/style.css
@@ -290,6 +290,7 @@ hamburger
   width: 100%;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 .btn::before, .btn::after {
   content: "";
@@ -1147,6 +1148,7 @@ hamburger
 }
 .banner .hero {
   position: relative;
+  color: #fff;
 }
 .banner .hero .hero-content {
   background: transparent;
@@ -1251,7 +1253,7 @@ hamburger
     opacity: 1;
   }
 }
-.banner .hero #cta-header {
+.banner .hero .hero-cta {
   background: #dc143c;
   margin: 20vh 0 0;
   position: relative;
@@ -1270,17 +1272,17 @@ hamburger
   z-index: 2;
 }
 @media (max-width: 576px) {
-  .banner .hero #cta-header {
+  .banner .hero .hero-cta {
     margin: 20vh 0 0;
   }
 }
 @media (min-width: 576px) {
-  .banner .hero #cta-header {
+  .banner .hero .hero-cta {
     margin: 20vh 0 0;
   }
 }
 @media (min-width: 768px) {
-  .banner .hero #cta-header {
+  .banner .hero .hero-cta {
     font-size: 1.5em;
     width: 20rem;
     text-align: center;
@@ -1288,7 +1290,7 @@ hamburger
   }
 }
 @media (min-width: 1024px) {
-  .banner .hero #cta-header {
+  .banner .hero .hero-cta {
     margin: 15vh 0 0;
   }
 }
@@ -1305,7 +1307,7 @@ hamburger
     transform: translateX(0);
   }
 }
-.banner .hero #cta-header::before, .banner .hero #cta-header::after {
+.banner .hero .hero-cta::before, .banner .hero .hero-cta::after {
   position: absolute;
   content: "";
   top: 0;
@@ -1317,11 +1319,11 @@ hamburger
   border: none;
   outline: none;
 }
-.banner .hero #cta-header::before {
+.banner .hero .hero-cta::before {
   box-shadow: inset 2px 2px 3px rgba(225, 225, 225, 0.1), inset -2px -2px 3px rgba(0, 0, 0, 0.15), 0.025rem 0.25rem 0.5rem rgba(0, 0, 0, 0.15);
   background: linear-gradient(0deg, #750b20, #dd134c);
 }
-.banner .hero #cta-header::after {
+.banner .hero .hero-cta::after {
   opacity: 1;
   z-index: -1;
   animation: 3s cta-btn infinite;
@@ -1332,7 +1334,7 @@ hamburger
   background: linear-gradient(0deg, #dc134c, #750b20);
   box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.2), inset -2px -2px 3px rgba(225, 225, 225, 0.2), 0.025rem 0.225rem 0.25rem rgba(0, 0, 0, 0.25);
 }
-.banner .hero #cta-header span {
+.banner .hero .hero-cta span {
   position: relative;
   display: inline-block;
   text-transform: none;
@@ -1359,31 +1361,71 @@ hamburger
   }
 }
 @media (max-width: 820px) {
-  .banner .hero #cta-header:active {
+  .banner .hero .hero-cta:active {
     transition: 0.2s;
     transform: scale(0.95);
   }
-  .banner .hero #cta-header:active::before {
+  .banner .hero .hero-cta:active::before {
     opacity: 0;
   }
-  .banner .hero #cta-header:active::after {
+  .banner .hero .hero-cta:active::after {
     opacity: 1;
   }
 }
 @media (min-width: 820px) {
-  .banner .hero #cta-header:hover {
+  .banner .hero .hero-cta:hover {
     transition: 0.2s;
     transform: scale(0.95);
     border-top-right-radius: 5rem;
   }
-  .banner .hero #cta-header:hover::before {
+  .banner .hero .hero-cta:hover::before {
     border-top-right-radius: 5rem;
     opacity: 0;
   }
-  .banner .hero #cta-header:hover::after {
+  .banner .hero .hero-cta:hover::after {
     border-top-right-radius: 5rem;
     opacity: 1;
   }
+}
+.banner .hero .hero-index-content {
+  padding: 5vh 5vw;
+  position: relative;
+  top: 5vh;
+  color: #fff;
+  text-transform: capitalize;
+}
+.banner .hero .hero-index-content span {
+  color: skyblue;
+}
+.banner .hero .hero-index-content .content-title h1 {
+  font-size: 1rem;
+  font-weight: 200;
+  margin-bottom: 0.25rem;
+}
+.banner .hero .hero-index-content .content-title h2 {
+  font-size: 2rem;
+  margin-bottom: 5vh;
+}
+.banner .hero .hero-index-content .content-value p {
+  color: #fff;
+  font-weight: 400;
+}
+.banner .hero .hero-index-content .content-value .cta {
+  width: 11rem;
+  margin-top: 5vh;
+}
+.banner .hero .hero-index-content .content-value .cta .btn {
+  color: #fff;
+  padding: 1rem;
+}
+.banner .hero .hero-index-content .content-value .cta .btn i {
+  color: #fff;
+}
+.banner .hero .hero-index-content .content-value .cta .btn::before {
+  background: linear-gradient(0deg, #750b20, #dd134c);
+}
+.banner .hero .hero-index-content .content-value .cta .btn::after {
+  background: linear-gradient(0deg, #dc134c, #750b20);
 }
 
 .skills-hero {
