--- a/css/style.css
+++ b/css/style.css
@@ -1050,7 +1050,7 @@ hamburger
   z-index: 1;
   overflow: hidden;
 }
-@media (max-width: 1024px) {
+@media (max-width: 768px) {
   .banner.index-banner::after {
     position: absolute;
     content: "";
@@ -1063,7 +1063,7 @@ hamburger
     background-repeat: no-repeat;
   }
 }
-@media (max-width: 1024px) and (max-width: 1024px) {
+@media (max-width: 768px) and (max-width: 768px) {
   .banner.index-banner::after {
     background-size: 90%;
     background-size: contain;
@@ -1073,7 +1073,7 @@ hamburger
     z-index: -1;
   }
 }
-@media (min-width: 1024px) {
+@media (min-width: 768px) {
   .banner.index-banner {
     background-image: url("../hero/ales-nesetril-Im7lZjxeLhg-unsplash-bg.jpg");
     background-position: center left;
@@ -1394,21 +1394,30 @@ hamburger
   color: #fff;
   text-transform: capitalize;
 }
+@media (min-width: 820px) {
+  .banner .hero .hero-index-content {
+    top: 15vh;
+  }
+}
 .banner .hero .hero-index-content span {
   color: skyblue;
 }
 .banner .hero .hero-index-content .content-title h1 {
   font-size: 1rem;
+  font-size: clamp(1rem, 2vw, 1.2rem);
   font-weight: 200;
   margin-bottom: 0.25rem;
 }
 .banner .hero .hero-index-content .content-title h2 {
   font-size: 2rem;
+  font-size: clamp(2rem, 5vw, 2.8rem);
   margin-bottom: 5vh;
 }
 .banner .hero .hero-index-content .content-value p {
   color: #fff;
   font-weight: 400;
+  font-size: 1rem;
+  font-size: clamp(1rem, 2vw, 1.12rem);
 }
 .banner .hero .hero-index-content .content-value .cta {
   width: 11rem;
@@ -1417,6 +1426,8 @@ hamburger
 .banner .hero .hero-index-content .content-value .cta .btn {
   color: #fff;
   padding: 1rem;
+  font-weight: 600;
+  font-size: 1rem, 3vw, 1.25rem;
 }
 .banner .hero .hero-index-content .content-value .cta .btn i {
   color: #fff;
