--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -14,7 +14,7 @@
     &.index-banner {
 
         // MOBILE HERO IMG
-        @media (max-width: 1024px) {
+        @media (max-width: 768px) {
 
             &::after {
                 position: absolute;
@@ -27,7 +27,7 @@
                 background-image: url('../hero/ales-nesetril-Im7lZjxeLhg-unsplash-bg.jpg');
                 background-repeat: no-repeat;
 
-                @media (max-width: 1024px) {
+                @media (max-width: 768px) {
                     background-size: 90%;
                     background-size: contain;
                     background-size: cover;
@@ -44,7 +44,7 @@
         }
 
         // DESKTOP HERO IMAGE
-        @media (min-width: 1024px) {
+        @media (min-width: 768px) {
             background-image: url('../hero/ales-nesetril-Im7lZjxeLhg-unsplash-bg.jpg');
             background-position: center left;
             background-position: 10% 50%;
@@ -434,6 +434,9 @@
             top: 5vh;
             color: #fff;
             text-transform: capitalize;
+            @include lg {
+                top: 15vh;
+            }
             span {
                 color: skyblue;
             }
@@ -442,11 +445,13 @@
                 // border: 2px solid pink;
                 h1 {
                     font-size: 1rem;
+                    font-size: clamp(1rem, 2vw, 1.2rem);
                     font-weight: 200;
                     margin-bottom: .25rem;
                 }
                 h2 {
                     font-size: 2rem;
+                    font-size: clamp(2rem, 5vw, 2.8rem);
                     margin-bottom: 5vh;
                 }
             }
@@ -458,6 +463,8 @@
                 p {
                     color: #fff;
                     font-weight: 400;
+                    font-size: 1rem;
+                    font-size: clamp(1rem, 2vw, 1.12rem);
                 }
     
                 .cta {
@@ -467,6 +474,8 @@
                     .btn {
                         color: #fff;
                         padding: 1rem;
+                        font-weight: 600;
+                        font-size: 1rem, 3vw, 1.25rem;
                         i {
                             color: #fff;
                         }
