--- a/css/style.css
+++ b/css/style.css
@@ -1068,8 +1068,8 @@ hamburger
     background-size: 90%;
     background-size: contain;
     background-size: cover;
-    background-position: 15% bottom;
-    mix-blend-mode: overlay;
+    background-position: 10% bottom;
+    opacity: 0.5;
     z-index: -1;
   }
 }
@@ -1390,7 +1390,7 @@ hamburger
 .banner .hero .hero-index-content {
   padding: 5vh 5vw;
   position: relative;
-  top: 5vh;
+  top: 10vh;
   color: #fff;
   text-transform: capitalize;
 }
@@ -1402,6 +1402,9 @@ hamburger
 .banner .hero .hero-index-content span {
   color: skyblue;
 }
+.banner .hero .hero-index-content .content-title {
+  margin-bottom: 25vh;
+}
 .banner .hero .hero-index-content .content-title h1 {
   font-size: 1rem;
   font-size: clamp(1rem, 2vw, 1.2rem);
@@ -1411,7 +1414,6 @@ hamburger
 .banner .hero .hero-index-content .content-title h2 {
   font-size: 2rem;
   font-size: clamp(2rem, 5vw, 2.8rem);
-  margin-bottom: 5vh;
 }
 .banner .hero .hero-index-content .content-value p {
   color: #fff;
